RESOLVED FIXED138948
AX: MathML expressions are misread by VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=138948
Summary AX: MathML expressions are misread by VoiceOver
chris fleizach
Reported 2014-11-20 20:27:16 PST
This <mroot><mn>8</mn> <mn>3</mn></mroot> creates a grouping where AX is not returning the index of the root. <rdar://problem/19038748>
Attachments
patch (6.43 KB, patch)
2014-11-20 20:30 PST, chris fleizach
no flags
chris fleizach
Comment 1 2014-11-20 20:30:15 PST
Mario Sanchez Prada
Comment 2 2014-11-21 01:40:56 PST
Comment on attachment 242018 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=242018&action=review > LayoutTests/platform/mac/accessibility/mathml-root.html:11 > +description("This tests ensures that both root index and radicand work in this case.") If possible, I would replace "in this case" with a short explanation on what "this case" is about Otherwise, it's not obvious for the "casual reader" what the test is actually about :-)
WebKit Commit Bot
Comment 3 2014-11-21 07:54:50 PST
Comment on attachment 242018 [details] patch Clearing flags on attachment: 242018 Committed r176447: <http://trac.webkit.org/changeset/176447>
WebKit Commit Bot
Comment 4 2014-11-21 07:54:55 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.