AX: MathML expressions are misread by VoiceOver https://bugs.webkit.org/show_bug.cgi?id=138948

Reviewed by Mario Sanchez Prada.

Source/WebCore:

The logic for deciding what's the radicand and an index was too tied to children placement.
We should instead pull directly from the source.

Test: platform/mac/accessibility/mathml-root.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::mathRadicandObject):
(WebCore::AccessibilityRenderObject::mathRootIndexObject):
* rendering/mathml/RenderMathMLRoot.h:

LayoutTests:

* platform/mac/accessibility/mathml-root-expected.txt: Added.
* platform/mac/accessibility/mathml-root.html: Added.


Canonical link: https://commits.webkit.org/156827@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@176447 268f45cc-cd09-0410-ab3c-d52691b4dbfc